<?xml version="1.0"?>
<!-- 
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->

<package format="3">
  <name>realsense_gazebo</name>
  <version>1.0.0</version>
  <description>Simulation of Realsense cameras in gazebo</description>

  <license>BSD</license>
  <license>Apache 2.0</license>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend condition="$GZ_VERSION == fortress">gz-fortress</depend>
  <depend condition="$GZ_VERSION == garden">gz-garden</depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>
  
</package>
